Project

General

Profile

Actions

Bug #38491

closed

"log [WRN] : Health check failed: 1 clients failing to respond to capability release (MDS_CLIENT_LATE_RELEASE)"

Added by Patrick Donnelly about 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Failure: "2019-02-26 14:12:18.324254 mon.a (mon.0) 218 : cluster [WRN] Health check failed: 1 clients failing to respond to capability release (MDS_CLIENT_LATE_RELEASE)" in cluster log
22 jobs: ['3641178', '3641335', '3641255', '3641421', '3641295', '3641264', '3641312', '3641444', '3641163', '3641170', '3641272', '3641238', '3641358', '3641342', '3641209', '3641212', '3641350', '3641327', '3641428', '3641249', '3641436', '3641256']
suites intersection: ['conf/{client.yaml', 'fuse-default-perm-no.yaml}', 'mds.yaml', 'mon.yaml', 'multimds/basic/{begin.yaml', 'osd.yaml}', 'overrides/{basic/{frag_enable.yaml', 'q_check_counter/check_counter.yaml', 'whitelist_health.yaml', 'whitelist_wrongly_marked_down.yaml}']
suites union: ['clusters/3-mds.yaml', 'clusters/9-mds.yaml', 'conf/{client.yaml', 'fuse-default-perm-no.yaml}', 'inline/no.yaml', 'inline/yes.yaml', 'k-distro.yaml}', 'mds.yaml', 'mon.yaml', 'mount/fuse.yaml', 'mount/kclient/{mount.yaml', 'ms-die-on-skipped.yaml}}', 'multimds/basic/{begin.yaml', 'objectstore-ec/bluestore-bitmap.yaml', 'objectstore-ec/bluestore-comp-ec-root.yaml', 'objectstore-ec/bluestore-comp.yaml', 'objectstore-ec/bluestore-ec-root.yaml', 'objectstore-ec/filestore-xfs.yaml', 'osd.yaml}', 'overrides/{basic/{frag_enable.yaml', 'overrides/{distro/random/{k-testing.yaml', 'overrides/{distro/rhel/{7.5.yaml', 'q_check_counter/check_counter.yaml', 'supported$/{ubuntu_latest.yaml}}', 'tasks/cfuse_workunit_kernel_untar_build.yaml}', 'tasks/cfuse_workunit_misc.yaml}', 'tasks/cfuse_workunit_suites_blogbench.yaml}', 'tasks/cfuse_workunit_suites_dbench.yaml}', 'tasks/cfuse_workunit_suites_ffsb.yaml}', 'tasks/cfuse_workunit_suites_fsstress.yaml}', 'tasks/cfuse_workunit_suites_fsx.yaml}', 'whitelist_health.yaml', 'whitelist_wrongly_marked_down.yaml}']

From: /a/pdonnell-2019-02-26_07:49:50-multimds-wip-pdonnell-testing-20190226.051327-distro-basic-smithi

Looks like one of the recent changes to the locker maybe broke something?


Related issues 3 (0 open3 closed)

Has duplicate CephFS - Bug #38471: mds does not wait for cap revoke when lock is in LOCK_LOCK_XLOCK state.DuplicateZheng Yan

Actions
Copied to CephFS - Backport #38669: luminous: "log [WRN] : Health check failed: 1 clients failing to respond to capability release (MDS_CLIENT_LATE_RELEASE)"ResolvedPrashant DActions
Copied to CephFS - Backport #38670: mimic: "log [WRN] : Health check failed: 1 clients failing to respond to capability release (MDS_CLIENT_LATE_RELEASE)"ResolvedPrashant DActions
Actions #1

Updated by Zheng Yan about 5 years ago

dup of http://tracker.ceph.com/issues/38471. It's real bug, (I don't know which change reveal it)

Actions #2

Updated by Patrick Donnelly about 5 years ago

  • Status changed from New to Duplicate
Actions #3

Updated by Patrick Donnelly about 5 years ago

  • Is duplicate of Bug #38471: mds does not wait for cap revoke when lock is in LOCK_LOCK_XLOCK state. added
Actions #4

Updated by Patrick Donnelly about 5 years ago

  • Has duplicate Bug #38471: mds does not wait for cap revoke when lock is in LOCK_LOCK_XLOCK state. added
Actions #5

Updated by Patrick Donnelly about 5 years ago

  • Is duplicate of deleted (Bug #38471: mds does not wait for cap revoke when lock is in LOCK_LOCK_XLOCK state.)
Actions #6

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Duplicate to Pending Backport
  • Pull request ID set to 26713
Actions #7

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38669: luminous: "log [WRN] : Health check failed: 1 clients failing to respond to capability release (MDS_CLIENT_LATE_RELEASE)" added
Actions #8

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38670: mimic: "log [WRN] : Health check failed: 1 clients failing to respond to capability release (MDS_CLIENT_LATE_RELEASE)" added
Actions #9

Updated by Nathan Cutler almost 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF