mds: wait for client to release shared cap when re-acquiring xlock

MDS may revoke shared cap from xlocker client during 'LOCK_XLOCKDONE ->
LOCK_LOCK_XLOCK' state transition.

Fixes: http://tracker.ceph.com/issues/38491
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit 218e784f2eb1eec6bbb7910b5432f7f36263dbe7)

Conflicts:
	src/mds/SimpleLock.h : Resovled in put_xlock